# operator/cmd/server/main.go
@@ -7,7 +7,6 @@ import (
 	"os/signal"
 	"syscall"
 
-	wfv1 "github.com/argoproj/argo-workflows/v3/pkg/apis/workflow/v1alpha1"
 	"k8s.io/client-go/kubernetes/scheme"
 	ctrl "sigs.k8s.io/controller-runtime"
 	"sigs.k8s.io/controller-runtime/pkg/client"
@@ -34,11 +33,6 @@ func main() {
 		log.Error(err, "Failed to add Flokoa scheme")
 		os.Exit(1)
 	}
-	if err := wfv1.AddToScheme(scheme.Scheme); err != nil {
-		log.Error(err, "Failed to add Argo Workflows scheme")
-		os.Exit(1)
-	}
-
 	// Create Kubernetes client with watch support for SSE endpoints
 	restConfig := ctrl.GetConfigOrDie()
 	k8sClient, err := client.NewWithWatch(restConfig, client.Options{Scheme: scheme.Scheme})
@@ -80,7 +74,6 @@ func main() {
 	modelService := server.NewModelService(k8sClient)
 	modelProviderService := server.NewModelProviderService(k8sClient)
 	agentToolService := server.NewAgentToolService(k8sClient)
-	agentWorkflowService := server.NewAgentWorkflowService(k8sClient)
 
 	// Create and start gRPC server
 	grpcServer := server.NewServer(
@@ -95,7 +88,6 @@ func main() {
 		modelService,
 		modelProviderService,
 		agentToolService,
-		agentWorkflowService,
 	)
 
 	if err := grpcServer.Start(ctx); err != nil {
